--- a/docker/nginx/symfony.conf
+++ b/docker/nginx/symfony.conf
@@ -60,8 +60,8 @@ server {
     }
 
     ## Certificates
-    #ssl_certificate /etc/nginx/ssl/domain/cert.pem;
-    #ssl_certificate_key /etc/nginx/ssl/domain/key.pem;
+    #ssl_certificate /etc/ssl/your_domain_name.pem;
+    #ssl_certificate_key /etc/ssl/your_domain_name.key;
     #ssl_trusted_certificate /chemin/vers/chain.pem;
 
     ## Protocol
