--- a/docker/nginx/symfony.conf
+++ b/docker/nginx/symfony.conf
@@ -7,9 +7,14 @@ server {
     root /var/www/deep-space-objects/public;
 
     location / {
-        try_files $uri /index.php$is_args$args;
-        # return 301 https://$host$request_uri;
+        #try_files $uri /index.php$is_args$args;
+        try_files $uri @rewriteapp;
     }
+
+    location @rewriteapp {
+        rewrite ^(.*)$ /index.php/$1 last;
+    }
+
 
     location ~ ^/(index)\.php(/|$) {
         fastcgi_pass php-upstream;
