Fix docker file

--- a/docker/php7-fpm/Dockerfile
+++ b/docker/php7-fpm/Dockerfile
@@ -37,8 +37,8 @@ RUN { \
 		echo 'opcache.memory_consumption=256'; \
 		echo 'opcache.interned_strings_buffer=16'; \
 		echo 'opcache.max_accelerated_files=20000'; \
-		echo 'opcache.revalidate_freq=60'; \
-		echo 'opcache.validate_timestamps'; \
+		echo 'opcache.revalidate_freq=1'; \
+		echo 'opcache.validate_timestamps=0'; \
 		echo 'opcache.fast_shutdown=1'; \
 		echo 'opcache.enable_cli=1'; \
 		echo 'opcache.enable= 1'; \
