--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
         hostname: php
         ports:
             - 9000:9000
+            - 10000:10000 # Port for scalingo
         volumes:
             - .:/var/www/deep-space-objects:cached
             - "${COMPOSER_CACHE_DIR}:/home/site/.composer:rw,cached"
