Remove unused files, clean .env, add MailHelper, add contact form

--- a/.env.dist
+++ b/.env.dist
@@ -34,3 +34,7 @@ ELK_HOST=
 ELK_PORT=
 UID=1000
 
+### > Astrobin ###
+ASTROBIN_API_KEY=PutHereYourOwnApiKey
+ASTROBIN_API_SECRET=PutHereYourOwnApiSecret
+### < Astrobin ###
