--- a/.env.dist
+++ b/.env.dist
@@ -38,3 +38,11 @@ UID=1000
 ASTROBIN_API_KEY=PutHereYourOwnApiKey
 ASTROBIN_API_SECRET=PutHereYourOwnApiSecret
 ### < Astrobin ###
+
+### < RECAPTCHA ###
+###> google/recaptcha ###
+# To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
+# https://www.google.com/recaptcha/admin
+GOOGLE_RECAPTCHA_SITE_KEY=
+GOOGLE_RECAPTCHA_SECRET=
+###< google/recaptcha ###
