--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "excelwebzone/recaptcha-bundle": "^1.5",
         "hamhamfonfon/astrobin": "dev-master",
         "ruflin/elastica": "^6.0",
         "sensio/framework-extra-bundle": "^5.2",
