--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,11 @@ services:
         hostname: php
         ports:
             - 9000:9000
-            - 10000:10000 # Port for scalingo
         volumes:
             - .:/var/www/deep-space-objects:cached
-            - "${COMPOSER_CACHE_DIR}:/home/site/.composer:rw,cached"
-            - "${NPM_CACHE_DIR}:/home/site/.npm:rw,cached"
-            #- "./docker/php7-fpm/www.conf:/usr/local/etc/php-fpm.d/www.conf"
+            #- "${COMPOSER_CACHE_DIR}:/home/site/.composer:rw,cached"
+            #- "${NPM_CACHE_DIR}:/home/site/.npm:rw,cached"
+            - "./docker/php7-fpm/www.conf:/usr/local/etc/php-fpm.d/www.conf"
             - "${SSH_AUTH_SOCK}:/ssh-agent"
         env_file:
           - .env
