--- a/docker/php7-fpm/www.conf
+++ b/docker/php7-fpm/www.conf
@@ -20,8 +20,8 @@
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
-user = site
-; group = site
+user = www-data
+group = www-data
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -104,7 +104,7 @@ pm = dynamic
 ; forget to tweak pm.* to fit your needs.
 ; Note: Used when pm is set to 'static', 'dynamic' or 'ondemand'
 ; Note: This value is mandatory.
-pm.max_children = 5
+pm.max_children = 20
 
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
@@ -417,3 +417,5 @@ clear_env = no
 ;php_admin_value[memory_limit] = 32M
 php_admin_value[upload_max_filesize] = 50M
 php_admin_value[post_max_size] = 50M
+
+catch_workers_output = yes
