Add memcached + test fix dockerfile php

--- a/.env.dist
+++ b/.env.dist
@@ -10,6 +10,7 @@ APP_SECRET=SECRET
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 TRUSTED_HOSTS=localhost
+MEMCACHED_URL:memcached://memcached:11211
 ###< symfony/framework-bundle ###
 
 
@@ -26,8 +27,6 @@ TIMEZONE=Europe/Paris
 NGINX_HOST=your-symfon-y-project-name.local
 SITE_UID=$(id -u)
 SITE_GID=$(id -g)
-COMPOSER_CACHE_DIR=/home/$(whoami)/.composer
-NPM_CACHE_DIR=/home/$(whoami)/.npm
 SSL_CERTIFICATE_CRT=/path/to/localhost.crt
 SSL_CERTIFICATE_KEY=/path/to/localhost.key
 ELK_HOST=
