--- a/docker/php7-fpm/Dockerfile
+++ b/docker/php7-fpm/Dockerfile
@@ -1,6 +1,6 @@
 # Source : https://framagit.org/nicolasunivlr/docker-symfony4/blob/master/php7-fpm/Dockerfile
 FROM php:7.2-fpm
-USER root
+#USER root
 ARG TIMEZONE
 ARG UID
 
@@ -9,16 +9,21 @@ MAINTAINER HamHamFonFon <balistik.fonfon@gmail.com>
 # Utils
 RUN set -eux; \
   apt-get update; \
-  apt-get -y install curl less vim libicu-dev zlib1g-dev libc-client-dev \
+  apt-get -y install curl less vim libicu-dev libmemcached-dev zlib1g-dev libc-client-dev \
   openssl wget nano libzip-dev pax-utils sudo gnupg unzip libpng-dev
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
-&& composer --version
+    && composer --version \
+    && chmod 755 /usr/local/bin/composer
 
 # Change uid and gid nginx user
 RUN usermod -u ${UID} www-data \
-    && groupmod -g ${UID} www-data \
+    && groupmod -g ${UID} www-data
+
+# Create directeories and add rights
+RUN mkdir -p /var/www/.composer \
+    && mkdir -p /var/www/.npm \
     && chown -R www-data:www-data /var/www
 
 # Set timezone
@@ -34,9 +39,14 @@ RUN docker-php-ext-install zip
 # APCU
 RUN pecl install apcu \
     && docker-php-ext-enable apcu
+
 # OPCACHE
 RUN docker-php-ext-configure opcache --enable-opcache \
     && docker-php-ext-install opcache
+
+# memcached
+RUN pecl install memcached-3.0.4 \
+    && docker-php-ext-enable memcached
 
 RUN { \
 		echo 'opcache.enable= 1'; \
