--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,6 @@ services:
             - 9000:9000
         volumes:
             - .:/var/www/deep-space-objects:cached
-            #- "${COMPOSER_CACHE_DIR}:/home/site/.composer:rw,cached"
-            #- "${NPM_CACHE_DIR}:/home/site/.npm:rw,cached"
             - "./docker/php7-fpm/www.conf:/usr/local/etc/php-fpm.d/www.conf"
             - "${SSH_AUTH_SOCK}:/ssh-agent"
         user: ${SITE_UID}
@@ -93,11 +91,10 @@ services:
         networks:
             - dso_stack
 
-    # Redis
-    dso_redis:
-        image: redis:alpine
-        container_name: dso_redis
-        ports:
-          - 6379:6379
+    # memcached
+    memcached:
+        image: memcached:latest
+        hostname: memcached
+        container_name: dso_memcached
         networks:
             - dso_stack
