Add memcached conf

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -16,7 +16,6 @@ framework:
 
     trusted_hosts: '%env(TRUSTED_HOSTS)%'
     cache:
-        #app: cache.adapter.filesystem
         # Put the unique name of your app here: the prefix seed
         # is used to compute stable namespaces for cache keys.
         prefix_seed: dso
@@ -24,12 +23,17 @@ framework:
         # The app cache caches to the filesystem by default.
         # Other options include:
 
+        pools:
+            cache.memcached:
+                adapter: cache.adapter.memcached
+                public: true
+                provider: '%env(MEMCACHED_URL)%'
         # Redis
         #app: cache.adapter.redis
         #default_redis_provider: redis://localhost
 
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
-        app: cache.adapter.apcu
+#        app: cache.adapter.apcu
     form: true
     templating:
         engines:
