Add Memcached service

--- a/.env.dist
+++ b/.env.dist
@@ -10,7 +10,7 @@ APP_SECRET=SECRET
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 TRUSTED_HOSTS=localhost
-MEMCACHED_URL:memcached://memcached:11211
+MEMCACHED_URL=memcached://memcached:11211
 ###< symfony/framework-bundle ###
 
 
