--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -22,12 +22,13 @@ framework:
 
         # The app cache caches to the filesystem by default.
         # Other options include:
-
+        default_memcached_provider: '%env(MEMCACHED_URL)%'
         pools:
-            cache.memcached:
+            app.cache.dso:
                 adapter: cache.adapter.memcached
-                public: true
-                provider: '%env(MEMCACHED_URL)%'
+                public: false
+                default_lifetime: 120
+
         # Redis
         #app: cache.adapter.redis
         #default_redis_provider: redis://localhost
