--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-lazy-image-loading": "^1.1.5",
         "vue-loader": "^15.4.2",
         "vue-plain-pagination": "^0.3.0",
+        "vue-pure-lightbox": "^2.1.8",
         "vue-router": "^3.0.2",
         "vue-social-sharing": "^2.3.3",
         "vue-template-compiler": "^2.5.18",
