--- a/.env.dist
+++ b/.env.dist
@@ -45,3 +45,9 @@ ASTROBIN_API_SECRET=PutHereYourOwnApiSecret
 GOOGLE_RECAPTCHA_SITE_KEY=
 GOOGLE_RECAPTCHA_SECRET=
 ###< google/recaptcha ###
+
+### OAUTH
+GITHUB_PUBLIC=
+GITHUB_SECRET=
+GOOGLE_PUBLIC=
+GOOGLE_SECRET=
