Fix styling pagination

--- a/.env.dist
+++ b/.env.dist
@@ -38,6 +38,10 @@ ASTROBIN_API_KEY=PutHereYourOwnApiKey
 ASTROBIN_API_SECRET=PutHereYourOwnApiSecret
 ### < Astrobin ###
 
+### > NASA APOD ###
+NASA_API_KEY=PutHereApiKey
+### < NASA APOD ###
+
 ### < RECAPTCHA ###
 ###> google/recaptcha ###
 # To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
