--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.22.0",
+        "@symfony/webpack-encore": "^0.26.0",
         "vue-svgicon": "^3.2.4",
         "webpack-notifier": "^1.6.0"
     },
@@ -16,8 +16,6 @@
     "dependencies": {
         "@fortawesome/free-regular-svg-icons": "^5.8.1",
         "copy-webpack-plugin": "^4.6.0",
-        "d3": "^5.7.0",
-        "d3-celestial": "^0.6.7",
         "node-sass": "^4.10.0",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.18",
@@ -33,6 +31,7 @@
         "vue-social-sharing": "^2.3.3",
         "vue-template-compiler": "^2.5.18",
         "vue2-autocomplete-js": "^0.2.2",
-        "vue2-touch-events": "^1.1.1"
+        "vue2-touch-events": "^1.1.1",
+        "d3-celestial": "git+https://git@github.com/ofrohn/d3-celestial"
     }
 }
