--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@fortawesome/free-regular-svg-icons": "^5.8.1",
         "copy-webpack-plugin": "^4.6.0",
+        "d3-celestial": "^0.6.10",
         "node-sass": "^4.10.0",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.18",
@@ -31,7 +32,6 @@
         "vue-social-sharing": "^2.3.3",
         "vue-template-compiler": "^2.5.18",
         "vue2-autocomplete-js": "^0.2.2",
-        "vue2-touch-events": "^1.1.1",
-        "d3-celestial": "git+https://git@github.com/ofrohn/d3-celestial"
+        "vue2-touch-events": "^1.1.1"
     }
 }
