--- a/docker/nginx/symfony.prod.conf
+++ b/docker/nginx/symfony.prod.conf
@@ -1,7 +1,8 @@
 server {
-	listen 8088;
-	listen [::]:8088;
-	server_name deepspaceobjects.synology.me;
+	listen 80;
+	listen [::]:80;
+	server_name localhost;
+	# server_name dso.loutres.freeboxos.fr;
 
 	root /var/services/web/www/deep-space-objects/public;
 
