change conf prod

--- a/docker/nginx/symfony.prod.conf
+++ b/docker/nginx/symfony.prod.conf
@@ -1,7 +1,7 @@
 server {
 	listen 81;
 	listen [::]:81;
-	server_name localhost;
+	server_name _;
 	# server_name dso.loutres.freeboxos.fr;
 
 	root /var/services/web/www/deep-space-objects/public;
