Change conf nginx

--- a/docker/nginx/symfony.conf
+++ b/docker/nginx/symfony.conf
@@ -7,13 +7,13 @@ server {
     root /var/www/deep-space-objects/public;
 
     location / {
-        #try_files $uri /index.php$is_args$args;
-        try_files $uri @rewriteapp;
+        try_files $uri /index.php$is_args$args;
+        #try_files $uri @rewriteapp;
     }
 
-    location @rewriteapp {
-        rewrite ^(.*)$ /index.php/$1 last;
-    }
+    #location @rewriteapp {
+    #    rewrite ^(.*)$ /index.php/$1 last;
+    #}
 
 
     location ~ ^/(index)\.php(/|$) {
