--- a/docker/nginx/symfony.prod.conf
+++ b/docker/nginx/symfony.prod.conf
@@ -1,22 +1,21 @@
 server {
 	listen 81;
 	listen [::]:81;
+
 	server_name _;
 	# server_name dso.loutres.freeboxos.fr;
-
 	root /var/services/web/www/deep-space-objects/public;
+    index index.php
+    client_max_body_size 100m;
 
 	location / {
-		try_files $uri @rewriteapps;
-	}
-
-	location @rewriteapp {
-		rewrite ^(.*)$ /index.php/$1 last;
+        try_files $uri /index.php$is_args$args;
 	}
 
 	location ~ ^/(index)\.php(/|$) {
 		#fastcgi_pass unix:/run/php-fpm/php72-fpm.sock;
 		fastcgi_pass unix:/run/php-fpm/php-9f1e642a-0d20-4664-8934-c51d34f609de.sock;
+		fastcgi_split_path_info ^(.+\.php)(/.*)$;
 		include fastcgi_params;
 
 		fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
