--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -8,8 +8,12 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            pattern: ^/
             anonymous: true
 
+        api:
+            pattern:  ^/api/
+            anonymous: true
             # activate different ways to authenticate
 
             # http_basic: true
@@ -21,5 +25,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/api, roles: IS_AUTHENTICATED_ANONYMOUSLY}
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
