Adding some description meta values

--- a/docker/nginx/symfony.conf
+++ b/docker/nginx/symfony.conf
@@ -11,9 +11,9 @@ server {
         #try_files $uri @rewriteapp;
     }
 
-    #location @rewriteapp {
-    #    rewrite ^(.*)$ /index.php/$1 last;
-    #}
+    location @rewriteapp {
+        rewrite ^(.*)$ /index.php/$1 last;
+    }
 
 
     location ~ ^/(index)\.php(/|$) {
