--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@fortawesome/free-regular-svg-icons": "^5.8.1",
         "copy-webpack-plugin": "^4.6.0",
         "d3-celestial": "^0.6.10",
+        "leaflet": "^1.4.0",
         "node-sass": "^4.11.0",
         "sass-loader": "^7.0.1",
         "vue": "^2.5.18",
@@ -32,6 +33,7 @@
         "vue-social-sharing": "^2.3.3",
         "vue-template-compiler": "^2.5.18",
         "vue2-autocomplete-js": "^0.2.2",
+        "vue2-leaflet": "^2.1.0",
         "vue2-touch-events": "^1.1.1"
     }
 }
