--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "excelwebzone/recaptcha-bundle": "^1.5",
         "friendsofsymfony/rest-bundle": "^2.5",
         "hamhamfonfon/astrobin": "dev-master",
+        "jms/serializer-bundle": "^3.3",
         "ruflin/elastica": "^6.0",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "4.2.*",
