Adding setup fields for observation

--- a/config/elasticsearch/mappings/observations.mapping.json
+++ b/config/elasticsearch/mappings/observations.mapping.json
@@ -41,6 +41,22 @@
         },
         "dso_list": {
           "type": "text"
+        },
+
+        "instrument": {
+          "type": "text"
+        },
+        "diameter": {
+          "type": "integer"
+        },
+        "focal": {
+          "type": "integer"
+        },
+        "mount": {
+          "type": "text"
+        },
+        "ocular": {
+          "type": "text"
         }
       }
     }
