--- a/config/services.yaml
+++ b/config/services.yaml
@@ -31,9 +31,9 @@ services:
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
-#    App\Api\Controller\:
-#        resource: '../src/Api/Controller'
-#        tags: ['controller.service_arguments']
+    App\Api\Controller\:
+        resource: '../src/Api/Controller'
+        tags: ['controller.service_arguments']
 
     App\Controller\:
         resource: '../src/Controller'
