--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,3 +4,4 @@ twig:
     strict_variables: '%kernel.debug%'
     globals:
         favicon: /favicon.ico
+        facebookId: '%env(FACEBOOK_APP_ID)%'
