--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "leaflet": "^1.5.0",
         "node-sass": "^4.12.0",
         "sass-loader": "^7.0.1",
+        "sass-mq-build": "^1.0.0",
         "vue": "^2.5.18",
         "vue-agile": "^0.3.7",
         "vue-burger-menu": "^2.0.1",
