--- a/config/elasticsearch/mappings/observations.mapping.json
+++ b/config/elasticsearch/mappings/observations.mapping.json
@@ -26,7 +26,7 @@
         },
         "created_at": {
           "type": "date",
-          "format": "yyyy-MM-dd||epoch_millis||date_time||ordinal_date_time||ordinal_date_time_no_millis"
+          "format": "yyyy-MM-dd||epoch_millis||date_time||ordinal_date_time||ordinal_date_time_no_millis||yyyy-MM-dd'THH:mm:ssP"
         },
         "is_public": {
           "type": "boolean"
