--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "axios": "^0.18.0",
         "copy-webpack-plugin": "^4.6.0",
         "d3-celestial": "^0.6.10",
+        "flatpickr": "^4.5.7",
         "leaflet": "^1.5.0",
         "node-sass": "^4.12.0",
         "sass-loader": "^7.0.1",
