--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@types/leaflet": "1.2.11",
+        "@voerro/vue-tagsinput": "^1.11.2",
         "axios": "^0.18.0",
         "copy-webpack-plugin": "^4.6.0",
         "d3-celestial": "^0.6.10",
