--- a/.env.dist
+++ b/.env.dist
@@ -38,6 +38,11 @@ ASTROBIN_API_KEY=PutHereYourOwnApiKey
 ASTROBIN_API_SECRET=PutHereYourOwnApiSecret
 ### < Astrobin ###
 
+### LINKS
+GITHUB_PAGE=https://github.com/HamHamFonFon/deep-space-objects
+PAYPAL_PAGE=
+FACEBOOK_PAGE=
+
 ### > NASA APOD ###
 NASA_API_KEY=PutHereApiKey
 ### < NASA APOD ###
