Add Docker image for mail

--- a/.env.dist
+++ b/.env.dist
@@ -19,6 +19,7 @@ MEMCACHED_URL=memcached://memcached:11211
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
+MAIL_PORT=
 ###< symfony/swiftmailer-bundle ###
 
 # DOCKER
