--- a/config/packages/dev/swiftmailer.yaml
+++ b/config/packages/dev/swiftmailer.yaml
@@ -1,4 +1,6 @@
 # See https://symfony.com/doc/current/email/dev_environment.html
 swiftmailer:
     # send all emails to a specific address
-    delivery_addresses: ['balistik.fonfon@gmail.comm']
+    delivery_addresses:
+        - 'balistik.fonfon@gmail.com'
+        - smeaudre@kaliop.com
