--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -1,7 +1,15 @@
 # Read the documentation: https://symfony.com/doc/master/bundles/FOSRestBundle/index.html
 fos_rest:
     routing_loader:
+        default_format: json
         include_format: false
+    body_listener: true
+    format_listener:
+        rules:
+    #            - { path: '^/api', priorities: [ json ], fallback_format: json, prefer_extension: false }
+    param_fetcher_listener: true
+    access_denied_listener:
+        json: true
     view:
         view_response_listener: 'force'
         formats:
@@ -10,9 +18,3 @@ fos_rest:
         exception_controller: 'fos_rest.exception.controller:showAction'
         codes:
             Elastica\Exception\NotFoundException: 404
-    format_listener:
-        rules:
-#            - { path: '^/api', prefer_extension: false, fallback_format: json, priorities: [ json ] }
-    param_fetcher_listener: true
-    access_denied_listener:
-        json: true
