--- a/config/services.yaml
+++ b/config/services.yaml
@@ -71,3 +71,5 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    #sensio_framework_extra.view.listener:
+    #    alias: Sensio\Bundle\FrameworkExtraBundle\EventListener\TemplateListener
