Fix updaye Symfony 4.2 to 4.3 with packages update

--- a/composer.json
+++ b/composer.json
@@ -11,28 +11,28 @@
         "jms/serializer-bundle": "^3.3",
         "ruflin/elastica": "^6.0",
         "sensio/framework-extra-bundle": "^5.2",
-        "symfony/asset": "4.2.*",
-        "symfony/console": "4.2.*",
-        "symfony/dotenv": "4.2.*",
-        "symfony/expression-language": "4.2.*",
+        "symfony/asset": "^4.2",
+        "symfony/console": "^4.2",
+        "symfony/dotenv": "^4.2",
+        "symfony/expression-language": "^4.2",
         "symfony/flex": "^1.1",
-        "symfony/form": "4.2.*",
-        "symfony/framework-bundle": "4.2.*",
-        "symfony/intl": "4.2.*",
+        "symfony/form": "^4.2",
+        "symfony/framework-bundle": "^4.2",
+        "symfony/intl": "^4.2",
         "symfony/maker-bundle": "^1.9",
         "symfony/monolog-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
         "symfony/requirements-checker": "^1.1",
-        "symfony/security-bundle": "4.2.*",
-        "symfony/serializer": "4.2.*",
-        "symfony/stopwatch": "4.2.*",
+        "symfony/security-bundle": "^4.2",
+        "symfony/serializer": "^4.2",
+        "symfony/stopwatch": "^4.2",
         "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/templating": "4.2.*",
-        "symfony/translation": "4.2.*",
-        "symfony/twig-bundle": "4.2.*",
-        "symfony/validator": "4.2.*",
+        "symfony/templating": "^4.2",
+        "symfony/translation": "^4.2",
+        "symfony/twig-bundle": "^4.2",
+        "symfony/validator": "^4.2",
         "symfony/webpack-encore-bundle": "^1.0",
-        "symfony/yaml": "4.2.*",
+        "symfony/yaml": "^4.2",
         "twig/extensions": "^1.5"
     },
     "repositories": [{
@@ -87,6 +87,6 @@
     },
     "require-dev": {
         "symfony/profiler-pack": "^1.0",
-        "symfony/var-dumper": "4.2.*"
+        "symfony/var-dumper": "^4.2"
     }
 }
