--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
         "@voerro/vue-tagsinput": "^1.11.2",
         "axios": "^0.18.0",
         "copy-webpack-plugin": "^4.6.0",
-        "d3-celestial": "^0.6.10",
+        "d3-celestial": "0.6.10",
         "flatpickr": "^4.5.7",
         "leaflet": "^1.5.0",
         "node-sass": "^4.12.0",
         "sass-loader": "^7.0.1",
         "sass-mq-build": "^1.0.0",
-        "vue": "^2.5.18",
+        "vue": "^2.6.10",
         "vue-agile": "^0.3.7",
         "vue-burger-menu": "^2.0.1",
         "vue-flux": "^5.1.9",
